# GLEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
config/: config.ini
shaders/: fragment.glsl  vertex.glsl
src/: main.c
src/base/: config.c  config.h  error.c  error.h  io.c  io.h  map.c  map.h  strutil.c  strutil.h  vector.c  vector.h
src/engine/: engine.c  engine.h  render.c  render.h  window.c  window.h
src/engine/render/: context.c  context.h  maps.c  maps.h  object.c  object.h  render.c  render.h
src/engine/window/: window.c  window.h
src/log/: log.c  log.h
src/math/: matrix.h
